# mmft-modular-1D-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/droplet-simulator/: Results.h  Simulator.h
src/: Results.cpp  Simulator.cpp  main.cpp
src/architecture/: CMakeLists.txt  Channel.h  ChannelPosition.h  Chip.cpp  Chip.h  FlowRatePump.cpp  FlowRatePump.h  Membrane.cpp  Membrane.h  Organ.cpp  Organ.h  PressurePump.cpp  PressurePump.h  Pump.cpp  Pump.h
src/simulation/: CMakeLists.txt  ChangeInputMixture.cpp  ChangeInputMixture.h  Droplet.h  Fluid.cpp  Fluid.h  IMembraneResistanceModel.h  IResistanceModel.h  MembraneResistanceModels.cpp  MembraneResistanceModels.h  Mixture.cpp  Mixture.h  ResistanceModels.cpp  ResistanceModels.h  Simulation.cpp  Simulation.h
src/simulation/events/: CMakeLists.txt  ChangeInputMixtureEvent.cpp  ChangeInputMixtureEvent.h  StopSimulationEvent.cpp  StopSimulationEvent.h
tests/: CMakeLists.txt
tests/droplet/: CMakeLists.txt  Droplet.tests.cpp
tests/gradientgenerator/: CMakeLists.txt  GradientGenerator.tests.cpp
tests/organ/: CMakeLists.txt  Organ.tests.cpp
tests/simulation/: Results.tests.cpp
